--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>niik.github.io</title>
-</head>
-<body>
-<h1>Hello world</h1>
-<p>I'm hosted with Githup pages.</p>
-</body>
+  <head>
+    <title>github.io</title>
+  </head>
+  <body>
+    <h1>Hello world</h1>
+    <p>I'm hosted with Githup pages.</p>
+    <h2>new status</h2>
+  </body>
 </html>
