--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <h1>Hello world</h1>
     <p>I'm hosted with Githup pages.</p>
     <h2>new status</h2>
-    <img
-      src="https://bipbap.ru/pictures/samye-krasivye-kartinki-35-foto.html"
-      alt=""
-    />
+    <div>
+      <img
+        src="https://bipbap.ru/pictures/samye-krasivye-kartinki-35-foto.html"
+        alt=""
+      />
+    </div>
   </body>
 </html>
