--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>github.io</title>
+    <title>Заголовок</title>
   </head>
   <body>
     <h1>Hello world</h1>
