--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <p>I'm hosted with Githup pages.</p>
     <h2>new status</h2>
     <div>
-      <img
-        src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcs14.pikabu.ru%2Fpost_img%2Fbig%2F2022%2F08%2F09%2F7%2F1660042650157930527.png&imgrefurl=https%3A%2F%2Fpikabu.ru%2Fstory%2Fkartinki_9352499&tbnid=MP1XwYqnxo8qFM&vet=10CD0QMyiDAWoXChMIkOuFz7b2-gIVAAAAAB0AAAAAEAI..i&docid=dPSWVAhQJw_M_M&w=1792&h=1024&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&ved=0CD0QMyiDAWoXChMIkOuFz7b2-gIVAAAAAB0AAAAAEAI"
-        alt=""
-      />
+      <img src="C:\Users\mulah\OneDrive\Изображения\Saved Pictures" alt="" />
     </div>
   </body>
 </html>
