--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <h1>Hello world</h1>
     <p>I'm hosted with Githup pages.</p>
     <h2>new status</h2>
-    <div>
-      <img src="C:\Users\mulah\OneDrive\Изображения\Saved Pictures" alt="" />
-    </div>
+
+    <img
+      src="https://github.com/jm-program/css-task/commit/236629ad7226d4d4ba0cdc05160c9d181a1d1807#diff-91133bada76342f1fd0315b1d936f315f2b37ab5b033f15d1c6ca194dfa4c822"
+      alt=""
+    />
   </body>
 </html>
