--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
     <title>new status</title>
   </head>
   <body>
-    <h1>Hello world</h1>
-    <p>I'm hosted with Githup pages.</p>
-    <h2>new status</h2>
-
-    <img
-      src="https://github.com/jm-program/css-task/commit/236629ad7226d4d4ba0cdc05160c9d181a1d1807#diff-91133bada76342f1fd0315b1d936f315f2b37ab5b033f15d1c6ca194dfa4c822"
-      alt=""
-    />
+    <h1>Get iintoo it today</h1>
+    <p>There is no charge or obligation upon registration.</p>
+    <input type="radio" name="individual" value="individual" />
   </body>
 </html>
