--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <body>
     <h1>Get iintoo it today</h1>
     <p>There is no charge or obligation upon registration.</p>
-    <input type="radio" name="individual" value="individual" />
+    <input type="radio" name="radio" value="individual" />
+    <input type="radio" name="radio" value="Business" />
+    <input type="radio" name="radio" value="IRA" />
+    <input type="radio" name="radio" value="Trust" />
   </body>
 </html>
