--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <body>
     <h1>Get iintoo it today</h1>
     <p>There is no charge or obligation upon registration.</p>
-    <input type="radio" name="radio" value="individual" />
-    <input type="radio" name="radio" value="Business" />
-    <input type="radio" name="radio" value="IRA" />
-    <input type="radio" name="radio" value="Trust" />
+    <input type="radio" name="radio" value="individual" checked />
+    <input type="radio" name="radio1" value="Business" />
+    <input type="radio" name="radio2" value="IRA" />
+    <input type="radio" name="radio3" value="Trust" />
   </body>
 </html>
