--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p>There is no charge or obligation upon registration.</p>
     <input type="radio" name="radio" value="individual" checked />
     <input type="radio" name="radio1" value="Business" />
-    <input type="radio" name="radio2" value="IRA" />
+    <input type="radio" name="radio2" value="IRA" />IRA
     <input type="radio" name="radio3" value="Trust" />
   </body>
 </html>
