--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <h1>Get iintoo it today</h1>
     <p>There is no charge or obligation upon registration.</p>
     <input type="radio" name="radio" value="individual" checked />
-    <input type="radio" name="radio1" value="Business" />
-    <input type="radio" name="radio2" value="IRA" />IRA
+    <input type="radio" name="radio" value="Business" />
+    <input type="radio" name="radio" value="IRA" />IRA
     <input type="radio" name="radio3" value="Trust" />
   </body>
 </html>
