--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <input type="radio" name="radio" value="Business" />
     <input type="radio" name="radio" value="IRA" />IRA
     <input type="radio" name="radio3" value="Trust" />
+    <input type="checkbox" /> I agree to the terms and receiving notifications
+    from iinto <a href="">View full terms</a>
   </body>
 </html>
