--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <body>
     <h1>Get iintoo it today</h1>
     <p>There is no charge or obligation upon registration.</p>
-    <input type="radio" name="radio" value="individual" checked />
-    <input type="radio" name="radio" value="Business" />
-    <input type="radio" name="radio" value="IRA" />IRA
-    <input type="radio" name="radio3" value="Trust" />
+    <input type="radio" name="radio" value="individual" checked /> Individual
+    <input type="radio" name="radio" value="Business" />Business
+    <input type="radio" name="radio" value="IRA" /> IRA
+    <input type="radio" name="radio" value="Trust" /> Trust
+    <br />
     <input type="checkbox" /> I agree to the terms and receiving notifications
     from iinto <a href="">View full terms</a>
   </body>
