--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <body>
     <h1>Get iintoo it today</h1>
     <p>There is no charge or obligation upon registration.</p>
+    <h2>What type of investor are you</h2>
+    <p>Select the type of investor you are below</p>
+    <form action="">
+      <input type="text" name="email" />
+      <input type="number" name="pfone" />
+    </form>
     <input type="radio" name="radio" value="individual" checked /> Individual
     <input type="radio" name="radio" value="Business" />Business
     <input type="radio" name="radio" value="IRA" /> IRA
