--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>new status</title>
   </head>
   <body>
-    <h1>Get iintoo it today</h1>
+    <h1 class="title">Get iintoo it today</h1>
     <p>There is no charge or obligation upon registration.</p>
     <h2>What type of investor are you</h2>
     <p>Select the type of investor you are below</p>
