--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>new status</title>
+    <title>Заголовок</title>
   </head>
   <body>
     <h1 class="title">Get iintoo it today</h1>
