--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <title>Заголовок</title>
   </head>
   <body>
-    <h1 class="title">Get iintoo it today</h1>
-    <p>There is no charge or obligation upon registration.</p>
-    <h2>What type of investor are you</h2>
-    <p>Select the type of investor you are below</p>
-    <form action="">
-      <input type="text" name="email" />
-      <input type="number" name="pfone" />
-    </form>
-    <input type="radio" name="radio" value="individual" checked /> Individual
-    <input type="radio" name="radio" value="Business" />Business
-    <input type="radio" name="radio" value="IRA" /> IRA
-    <input type="radio" name="radio" value="Trust" /> Trust
-    <br />
-    <input type="checkbox" /> I agree to the terms and receiving notifications
-    from iinto <a href="">View full terms</a>
+    <main>
+      <h1 class="title">Get iintoo it today</h1>
+      <p>There is no charge or obligation upon registration.</p>
+      <h2>What type of investor are you</h2>
+      <p>Select the type of investor you are below</p>
+      <form action="">
+        <input type="text" name="email" />
+        <input type="number" name="pfone" />
+      </form>
+      <input type="radio" name="radio" value="individual" checked /> Individual
+      <input type="radio" name="radio" value="Business" />Business
+      <input type="radio" name="radio" value="IRA" /> IRA
+      <input type="radio" name="radio" value="Trust" /> Trust
+      <br />
+      <input type="checkbox" /> I agree to the terms and receiving notifications
+      from iinto <a href="">View full terms</a>
+    </main>
   </body>
 </html>
