--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <main>
       <h1 class="title">Get iintoo it today</h1>
       <p>There is no charge or obligation upon registration.</p>
-      <h2>What type of investor are you</h2>
-      <p>Select the type of investor you are below</p>
       <form action="">
         <input type="text" name="email" />
         <input type="number" name="pfone" />
       </form>
-      <input type="radio" name="radio" value="individual" checked /> Individual
-      <input type="radio" name="radio" value="Business" />Business
-      <input type="radio" name="radio" value="IRA" /> IRA
-      <input type="radio" name="radio" value="Trust" /> Trust
+      <h2>What type of investor are you</h2>
+      <p>Select the type of investor you are below</p>
+      <nav>
+        <input type="radio" name="radio" value="individual" checked />
+        Individual <input type="radio" name="radio" value="Business" />Business
+        <input type="radio" name="radio" value="IRA" /> IRA
+        <input type="radio" name="radio" value="Trust" /> Trust
+      </nav>
       <br />
       <input type="checkbox" /> I agree to the terms and receiving notifications
       from iinto <a href="">View full terms</a>
