--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <main>
       <h1 class="title">Get iintoo it today</h1>
-      <p>There is no charge or obligation upon registration.</p>
+      <h4>There is no charge or obligation upon registration.</h4>
       <form action="">
-        <input type="text" name="email" />
+        <input type="text" name="email" value="gus.goodwin@gmail.com" />
         <input type="number" name="pfone" />
       </form>
       <h2>What type of investor are you</h2>
@@ -23,7 +23,8 @@
       </nav>
       <br />
       <input type="checkbox" /> I agree to the terms and receiving notifications
-      from iinto <a href="">View full terms</a>
+      from iintoo <a href="">View full terms</a>
     </main>
+    <button>Greate Account</button>
   </body>
 </html>
