--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <main>
       <h1 class="title">Get iintoo it today</h1>
       <h4>There is no charge or obligation upon registration.</h4>
-      <form action="">
+      <form action="" class="up">
         <input type="text" name="email" value="gus.goodwin@gmail.com" />
         <input type="number" name="pfone" />
       </form>
