--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
   <body>
     <main>
       <h1 class="title">Get iintoo it today</h1>
-      <h4>There is no charge or obligation upon registration.</h4>
-      <form action="" class="up">
-        <input type="text" name="email" value="gus.goodwin@gmail.com" />
+      <p class="line">There is no charge or obligation upon registration.</p>
+      <form action="">
+        <input
+          class="up"
+          type="text"
+          name="email"
+          value="gus.goodwin@gmail.com"
+        />
         <input type="number" name="pfone" />
       </form>
       <h2>What type of investor are you</h2>
