--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           name="email"
           value="gus.goodwin@gmail.com"
         />
-        <input type="number" name="pfone" />
+        <input class="upp" type="number" name="pfone" />
       </form>
       <h2>What type of investor are you</h2>
       <p>Select the type of investor you are below</p>
